--- a/visualization-life-expectancy-austria-2019.ipynb
+++ b/visualization-life-expectancy-austria-2019.ipynb
@@ -9,8 +9,10 @@
    },
    "source": [
     "# Analysis of life expectancy in Austria for the year 2019\n",
-    "[Data Sources](http://www.statistik-austria.at/web_de/statistiken/menschen_und_gesellschaft/bevoelkerung/sterbetafeln/index.html)\n",
-    "[GitHub - Repository](https://github.com/thomashon/mortality-austria)\n",
+    "\n",
+    "Data Sources: [Statistik Austria](http://www.statistik-austria.at/web_de/statistiken/menschen_und_gesellschaft/bevoelkerung/sterbetafeln/index.html)  \n",
+    "\n",
+    "[GitHub](https://github.com/thomashon/visualization-life-expectancy-austria-2019)\n",
     "\n",
     "This Notebook follows [Ben Fry's basic Data Visualization Process](https://www.dashingd3js.com/the-data-visualization-process):\n",
     "\n",
