github csv file

--- a/visualization-life-expectancy-austria-2019.ipynb
+++ b/visualization-life-expectancy-austria-2019.ipynb
@@ -42,14 +42,23 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-02T13:48:45.413358Z",
-     "start_time": "2020-02-02T13:48:43.294417Z"
+     "end_time": "2020-02-13T13:59:15.453959Z",
+     "start_time": "2020-02-13T13:59:08.795832Z"
     },
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\thoma\\AppData\\Roaming\\Python\\Python37\\site-packages\\statsmodels\\tools\\_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+      "  import pandas.util.testing as tm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -70,11 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-02T13:48:45.619509Z",
-     "start_time": "2020-02-02T13:48:45.413358Z"
+     "end_time": "2020-02-13T13:59:27.867075Z",
+     "start_time": "2020-02-13T13:59:27.210165Z"
     },
     "slideshow": {
      "slide_type": "subslide"
@@ -194,13 +203,18 @@
        "4       0.000000      75.428674            99484.270051  7.503967e+06  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('data-life-expectancy-austria-2019.csv')\n",
+    "try:\n",
+    "    df = pd.read_csv('data-life-expectancy-austria-2019.csv')\n",
+    "except:\n",
+    "    github_csv = 'https://raw.githubusercontent.com/thomashon/visualization-life-expectancy-austria-2019/master/data-life-expectancy-austria-2019.csv'\n",
+    "    df = pd.read_csv(github_csv)\n",
+    "    \n",
     "df.head()"
    ]
   },
